<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login.MakeSelection">


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="741dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_login"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/josefine"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefine"
            android:text="@string/makeselection_details"
            android:textColor="@color/blue"
            android:textSize="20sp"

            />



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_email_icon"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toRightOf="@+id/email_icon"
                android:fontFamily="@font/josefine"
                android:text="@string/via_email"
                android:textColor="@color/blue"

                android:textSize="25sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_title"
                android:layout_toRightOf="@+id/email_icon"
                android:fontFamily="@font/josefine"
                android:text="sample@gmail.com"
                android:textColor="@color/blue"

                android:textSize="18sp" />

            <Button
                android:id="@+id/emai_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />
        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

